# Tvorba-gfx

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.h.in  context.cpp  context.h  entity.cpp  entity.h  event.cpp  event.h  events.cpp  events.h  globals.h  main.cpp  model.h  render.cpp  render.h  tvorba.h
cmake/Modules/: FindSDL2.cmake
